# brochure

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  changelog.json
.cargo/: config.toml
changelog/: v0.1.0.md
scripts/: ollama_agent.py
src/: app.rs  fetch.rs  main.rs  storage.rs
src/handlers/: article.rs  changelog.rs  feed_editor.rs  feed_list.rs  mod.rs  saved_category_editor.rs  settings.rs  theme_editor.rs
src/models/: core_types.rs  events.rs  feed.rs  mod.rs  navigation.rs  scroll.rs  tree.rs
src/models/theme/: custom_theme.rs  custom_theme_colors.rs  editor.rs  mod.rs
src/state/: add_feed.rs  category_picker.rs  feed_editor.rs  mod.rs  opml.rs
src/ui/: changelog.rs  chrome.rs  content.rs  editor.rs  feed_editor.rs  mod.rs  popups.rs  saved_category_editor.rs  settings.rs  theme.rs  theme_editor.rs
src/ui/content/: article_detail.rs  article_list.rs  category_view.rs  footer.rs  helpers.rs  layouts.rs  mod.rs  saved_sidebar.rs  sidebar.rs  utils.rs
