[package]
name = "brochure"
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
description = "A terminal RSS reader built with Ratatui"
license = "MIT"
authors = ["Sylviromi"]
repository = "https://github.com/Sylviromi/brochure"
readme = "README.md"
keywords = ["rss", "tui", "terminal", "reader", "atom"]
categories = ["command-line-utilities"]
exclude = ["CLAUDE.md"]

[[bin]]
name = "brochure"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
crossterm = "0.29.0"
feed-rs = "2.3.1"
html-to-markdown-rs = "3.4.0"
open = "5.3.3"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
readability = { version = "0.3.0", default-features = false }
quick-xml = "0.39.2"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
limner = { path = "../limner", features = ["image-protocol"] }
ratatui-image = { version = "11", default-features = false, features = ["crossterm", "image-defaults"] }
arboard = "3"
tui-scrollbar = "0.2.4"
